- Add Authentication - Use sqlite
