# directories/createDirectory.go
@@ -1,20 +1,32 @@
-package main
+package directories
 
 import (
 	"encoding/json"
+	"filesystem_service/auth"
 	fs "filesystem_service/customFs"
+	"filesystem_service/types"
 	"net/http"
 )
 
-func createDirectory(writer http.ResponseWriter, request *http.Request) {
+func CreateDirectory(writer http.ResponseWriter, request *http.Request) {
 	writer.Header().Set("Access-Control-Allow-Origin", "*")
 	writer.Header().Add("Content-Type", "application/json")
+
+	if _, err := auth.CheckToken(request); err != nil {
+		writer.WriteHeader(403)
+		response, _ := json.Marshal(&types.HttpError{
+			Code:    403,
+			Message: err.Error(),
+		})
+		_, _ = writer.Write(response)
+		return
+	}
 
 	var body fs.Directory
 
 	if err := json.NewDecoder(request.Body).Decode(&body); err != nil {
 		writer.WriteHeader(400)
-		response, _ := json.Marshal(&HttpError{
+		response, _ := json.Marshal(&types.HttpError{
 			Code:    400,
 			Message: err.Error(),
 		})
@@ -26,7 +38,7 @@ func createDirectory(writer http.ResponseWriter, request *http.Request) {
 
 	if _, err := d.Create(); err != nil {
 		writer.WriteHeader(400)
-		response, _ := json.Marshal(&HttpError{
+		response, _ := json.Marshal(&types.HttpError{
 			Code:    400,
 			Message: err.Error(),
 		})
