# directories/deleteDirectory.go
@@ -1,33 +1,34 @@
-package main
+package directories
 
 import (
 	"encoding/json"
+	"filesystem_service/auth"
 	fs "filesystem_service/customFs"
+	"filesystem_service/types"
 	"net/http"
 	"strings"
 )
 
-func deleteDirectory(writer http.ResponseWriter, request *http.Request) {
+func DeleteDirectory(writer http.ResponseWriter, request *http.Request) {
 	writer.Header().Add("Content-Type", "application/json")
 	writer.Header().Set("Access-Control-Allow-Origin", "*")
-	isForce := request.URL.Query().Has("force")
 
-	path := "/" + strings.Replace(request.PathValue("path"), "%2F", "/", -1)
-
-	d := fs.NewDirectory(path)
-
-	/*fi, err := os.Stat(path)
-	if err != nil {
-		writer.WriteHeader(400)
-		response, _ := json.Marshal(&HttpError{
-			Code:    400,
+	if _, err := auth.CheckToken(request); err != nil {
+		writer.WriteHeader(403)
+		response, _ := json.Marshal(&types.HttpError{
+			Code:    403,
 			Message: err.Error(),
 		})
 		_, _ = writer.Write(response)
 		return
 	}
 
-	if fi.Mode().IsDir() {*/
+	isForce := request.URL.Query().Has("force")
+
+	path := fs.ROOT + strings.Replace(request.PathValue("path"), "%2F", "/", -1)
+
+	d := fs.NewDirectory(path)
+
 	var err error
 	if isForce {
 		_, err = d.DeepDelete()
@@ -37,16 +38,15 @@ func deleteDirectory(writer http.ResponseWriter, request *http.Request) {
 
 	if err != nil {
 		writer.WriteHeader(400)
-		response, _ := json.Marshal(&HttpError{
+		response, _ := json.Marshal(&types.HttpError{
 			Code:    400,
 			Message: err.Error(),
 		})
 		_, _ = writer.Write(response)
 		return
 	}
-	//}
 
-	response, _ := json.Marshal(&ResponseStatus{
+	response, _ := json.Marshal(&types.ResponseStatus{
 		Status: "success",
 	})
 
